crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@record-access.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/expression/record-access.input
---
Input: foo.bar.baz

Start { kind: RecordAccessExpression }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Token { kind: Period }
  Start { kind: Separated }
    Start { kind: Name }
      Token { kind: Label }
    Finish
    Token { kind: Period }
    Start { kind: Name }
      Token { kind: Label }
    Finish
  Finish
Finish

