crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@record-as-type-argument.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/type/record-as-type-argument.input
---
Input: Maybe { a :: Int }

Start { kind: ApplicationType }
  Start { kind: ConstructorType }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: RecordType }
      Start { kind: Wrapped }
        Token { kind: LeftCurly }
        Start { kind: RowInner }
          Start { kind: Separated }
            Start { kind: RowField }
              Start { kind: Name }
                Token { kind: Label }
              Finish
              Token { kind: Colon2 }
              Start { kind: ConstructorType }
                Start { kind: QualifiedName }
                  Start { kind: NameRef }
                    Token { kind: Upper }
                  Finish
                Finish
              Finish
            Finish
          Finish
        Finish
        Token { kind: RightCurly }
      Finish
    Finish
  Finish
Finish
