crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@record-update-leaf.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/expression/record-update-leaf.input
---
Input: a { b = 0, c = 1 }

Start { kind: ExpressionOperatorChain }
  Start { kind: ExpressionInfixChain }
    Start { kind: ApplicationExpression }
      Start { kind: RecordUpdateExpression }
        Start { kind: VariableExpression }
          Start { kind: QualifiedName }
            Start { kind: NameRef }
              Token { kind: Lower }
            Finish
          Finish
        Finish
        Start { kind: Wrapped }
          Token { kind: LeftCurly }
          Start { kind: Separated }
            Start { kind: RecordUpdateLeaf }
              Start { kind: Name }
                Token { kind: Label }
              Finish
              Token { kind: Equal }
              Start { kind: ExpressionOperatorChain }
                Start { kind: ExpressionInfixChain }
                  Start { kind: ApplicationExpression }
                    Start { kind: LiteralExpression }
                      Token { kind: LiteralInteger }
                    Finish
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                  Start { kind: OneOrMore }
                  Finish
                Finish
                Start { kind: OneOrMore }
                Finish
              Finish
            Finish
            Token { kind: Comma }
            Start { kind: RecordUpdateLeaf }
              Start { kind: Name }
                Token { kind: Label }
              Finish
              Token { kind: Equal }
              Start { kind: ExpressionOperatorChain }
                Start { kind: ExpressionInfixChain }
                  Start { kind: ApplicationExpression }
                    Start { kind: LiteralExpression }
                      Token { kind: LiteralInteger }
                    Finish
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                  Start { kind: OneOrMore }
                  Finish
                Finish
                Start { kind: OneOrMore }
                Finish
              Finish
            Finish
          Finish
          Token { kind: RightCurly }
        Finish
      Finish
      Start { kind: OneOrMore }
      Finish
    Finish
    Start { kind: OneOrMore }
    Finish
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
