crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@tail-record.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/type/tail-record.input
---
Input: { | r }

Start { kind: RecordType }
  Start { kind: Wrapped }
    Token { kind: LeftBracket }
    Start { kind: RowInner }
      Start { kind: RowTail }
        Token { kind: Pipe }
        Start { kind: VariableType }
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
    Token { kind: RightBracket }
  Finish
Finish

