crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@tail-row.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/type/tail-row.input
---
Input: ( | r )

Start { kind: TypeOperatorChain }
  Start { kind: ApplicationType }
    Start { kind: RowType }
      Start { kind: Wrapped }
        Token { kind: LeftParenthesis }
        Start { kind: RowInner }
          Start { kind: RowTail }
            Token { kind: Pipe }
            Start { kind: TypeOperatorChain }
              Start { kind: ApplicationType }
                Start { kind: VariableType }
                  Start { kind: NameRef }
                    Token { kind: Lower }
                  Finish
                Finish
                Start { kind: OneOrMore }
                Finish
              Finish
              Start { kind: OneOrMore }
              Finish
            Finish
          Finish
        Finish
        Token { kind: RightParenthesis }
      Finish
    Finish
    Start { kind: OneOrMore }
    Finish
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
