crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@trailing-comma.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/failing/expression/trailing-comma.input
---
Input: [ 1, ]

Start { kind: ExpressionOperatorChain }
  Start { kind: ExpressionInfixChain }
    Start { kind: ApplicationExpression }
      Start { kind: LiteralExpression }
        Start { kind: LiteralArray }
          Start { kind: Wrapped }
            Token { kind: LeftSquare }
            Start { kind: Separated }
              Start { kind: ExpressionOperatorChain }
                Start { kind: ExpressionInfixChain }
                  Start { kind: ApplicationExpression }
                    Start { kind: LiteralExpression }
                      Token { kind: LiteralInteger }
                    Finish
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                  Start { kind: OneOrMore }
                  Finish
                Finish
                Start { kind: OneOrMore }
                Finish
              Finish
              Token { kind: Comma }
              Start { kind: ExpressionOperatorChain }
                Start { kind: ExpressionInfixChain }
                  Start { kind: ApplicationExpression }
                    Error { message: "expected an expression" }
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                  Start { kind: OneOrMore }
                  Finish
                Finish
                Start { kind: OneOrMore }
                Finish
              Finish
            Finish
            Token { kind: RightSquare }
          Finish
        Finish
      Finish
      Start { kind: OneOrMore }
      Finish
    Finish
    Start { kind: OneOrMore }
    Finish
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
